--- a/package.json
+++ b/package.json
@@ -42,12 +42,15 @@
     "moment": "^2.13.0",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
+    "react-dropdown": "^0.6.1",
     "react-redux": "^4.1.2",
     "react-router": "^2.4.1",
+    "react-select": "^1.0.0",
     "react-transform-catch-errors": "^1.0.2",
     "react-transform-hmr": "^1.0.2",
     "redbox-react": "^1.2.2",
     "redux": "^3.1.5",
+    "redux-form": "^5.3.1",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.0.1",
     "request": "*",
