--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "material-ui": "^0.14.4",
     "moment": "^2.13.0",
     "react": "^0.14.7",
+    "react-checkbox-group": "^1.0.4",
     "react-dom": "^0.14.7",
     "react-dropdown": "^0.6.1",
     "react-redux": "^4.1.2",
