--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "less-loader": "~2.2.3",
     "material-ui": "^0.14.4",
     "moment": "^2.13.0",
+    "node-expat": "^2.3.15",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-dropdown": "^1.0.4",
@@ -56,7 +57,9 @@
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.0.1",
     "request": "*",
+    "request-promise": "^4.1.1",
     "rimraf": "^2.5.2",
+    "string-to-stream": "^1.1.0",
     "style-loader": "~0.13.1",
     "tedious": "^1.14.0",
     "ts-loader": "^0.8.1",
@@ -65,6 +68,7 @@
     "typescript": "^1.7.5",
     "webpack": "^1.12.15",
     "webpack-dev-middleware": "^1.5.1",
-    "webpack-hot-middleware": "^2.6.4"
+    "webpack-hot-middleware": "^2.6.4",
+    "xml-stream": "^0.4.5"
   }
 }
