--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "less-loader": "~2.2.3",
     "material-ui": "^0.14.4",
     "moment": "^2.13.0",
-    "node-expat": "^2.3.15",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-dropdown": "^1.0.4",
@@ -69,6 +68,6 @@
     "webpack": "^1.12.15",
     "webpack-dev-middleware": "^1.5.1",
     "webpack-hot-middleware": "^2.6.4",
-    "xml-stream": "^0.4.5"
+    "xml-flow": "^1.0.1"
   }
 }
