Update manifest and tweak build script

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "build": "npm run webpack",
     "typings": "node_modules\\.bin\\tsd.cmd install",
-    "webpack": "node_modules\\.bin\\webpack.cmd --config config/webpack.prod.js",
+    "webpack": "node_modules\\.bin\\webpack.cmd --config config\\webpack.prod.js",
     "rimraf": "node_modules\\.bin\\rimraf.cmd node_modules",
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
