--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "https": "*",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "*",
+    "jsonwebtoken": "^7.1.9",
     "less": "~2.6.1",
     "less-loader": "~2.2.3",
     "material-ui": "^0.14.4",
