--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "less": "~2.6.1",
     "less-loader": "~2.2.3",
     "material-ui": "^0.14.4",
+    "office-ui-fabric-react": "0.63.4",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-dropdown": "^1.0.4",
