--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "body-parser": "^1.15.1",
     "clipboard-js": "^0.3.1",
     "css-loader": "~0.23.1",
+    "es6-promise": "^4.0.5",
     "eslint": "^3.1.1",
     "express": "^4.13.4",
     "extract-text-webpack-plugin": "*",
