--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "material-ui": "^0.14.4",
     "office-ui-fabric-react": "0.63.4",
     "react": "^0.14.7",
+    "react-contenteditable": "^2.0.2",
     "react-dom": "^0.14.7",
     "react-dropdown": "^1.0.4",
     "react-redux": "^4.1.2",
