--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "build": "npm run webpack",
     "typings": "node_modules\\.bin\\tsd.cmd install",
-    "webpack": "node_modules\\.bin\\webpack.cmd --config config\\webpack.prod.js",
+    "webpack": "node_modules\\.bin\\webpack.cmd",
     "rimraf": "node_modules\\.bin\\rimraf.cmd node_modules",
     "start": "node src\\server\\server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -21,52 +21,38 @@
     "url": "git+https://github.com/annich-ms/OutlookVSTS"
   },
   "dependencies": {
-    "babel-core": "^6.4.5",
-    "babel-loader": "^6.2.1",
-    "babel-plugin-react-transform": "^2.0.0",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
-    "babel-preset-stage-0": "^6.3.13",
+    "@types/jquery": "^2.0.40",
+    "@types/office-js": "0.0.37",
+    "@types/react": "^0.14.41",
+    "@types/react-dom": "^0.14.22",
+    "@types/react-redux": "^4.4.36",
+    "@types/react-router": "^3.0.0",
     "body-parser": "^1.15.1",
-    "css-loader": "~0.23.1",
-    "eslint": "^3.1.1",
     "express": "^4.13.4",
-    "extract-text-webpack-plugin": "*",
     "http": "*",
     "https": "*",
-    "isomorphic-fetch": "^2.2.1",
-    "jquery": "*",
+    "jquery": "^3.1.1",
     "jsonwebtoken": "^7.1.9",
-    "less": "~2.6.1",
-    "less-loader": "~2.2.3",
-    "material-ui": "^0.14.4",
-    "office-ui-fabric-react": "0.63.4",
+    "office-ui-fabric-react": "^1.4.0",
     "react": "^0.14.7",
     "react-contenteditable": "^2.0.2",
     "react-dom": "^0.14.7",
     "react-dropdown": "^1.0.4",
     "react-redux": "^4.1.2",
     "react-router": "^2.4.1",
-    "react-select": "^0.9.1",
-    "react-tap-event-plugin": "^0.2.0",
-    "react-transform-catch-errors": "^1.0.2",
-    "react-transform-hmr": "^1.0.2",
-    "redbox-react": "^1.2.2",
     "redux": "^3.1.5",
-    "redux-form": "^5.3.1",
-    "redux-logger": "^2.6.1",
-    "redux-thunk": "^2.0.1",
+    "redux-thunk": "^2.2.0",
     "request": "*",
     "request-promise": "^4.1.1",
     "rimraf": "^2.5.2",
+    "source-map": "^0.5.6",
+    "source-map-loader": "^0.1.6",
     "string-to-stream": "^1.1.0",
-    "style-loader": "~0.13.1",
     "tedious": "^1.14.0",
-    "ts-loader": "^0.8.1",
-    "tsd": "^0.6.5",
+    "ts-loader": "^2.0.0",
     "tslint": "^3.3.0",
     "tslint-loader": "^2.1.0",
-    "typescript": "^1.7.5",
+    "typescript": "^2.1.5",
     "webpack": "^1.13.2",
     "xml-flow": "^1.0.1"
   }
