--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
         "**/.DS_Store": true,
         "node_modules": true,
         "bin": true
-    }
+    },
+    "vsicons.presets.angular": false
 }
