--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
   "description": "An add-in for turning emails into bugs",
   "main": "index.js",
   "scripts": {
-    "build": "npm run webpack",
-    "typings": "node_modules\\.bin\\tsd.cmd install",
+    "build": "npm run webpack && npm run tsc",
+    "tsc": "node_modules\\.bin\\tsc.cmd",
     "webpack": "node_modules\\.bin\\webpack.cmd",
     "rimraf": "node_modules\\.bin\\rimraf.cmd node_modules",
-    "start": "node src\\server\\server.js",
+    "start": "node bin\\server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Microsoft",
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@types/jquery": "^2.0.40",
+    "@types/knex": "0.0.41",
     "@types/office-js": "0.0.37",
     "@types/react": "^0.14.41",
     "@types/react-dom": "^0.14.22",
@@ -33,6 +34,8 @@
     "https": "*",
     "jquery": "^3.1.1",
     "jsonwebtoken": "^7.1.9",
+    "knex": "^0.12.7",
+    "mssql": "^3.3.0",
     "office-ui-fabric-react": "^1.5.5",
     "react": "^0.14.7",
     "react-contenteditable": "^2.0.2",
@@ -47,6 +50,7 @@
     "rimraf": "^2.5.2",
     "source-map": "^0.5.6",
     "source-map-loader": "^0.1.6",
+    "sqlite": "^2.3.0",
     "string-to-stream": "^1.1.0",
     "tedious": "^1.14.0",
     "ts-loader": "^2.0.0",
