--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,11 @@
     "preserveConstEnums": true,
     "sourceMap": true,
     "outDir": "bin",
-    "experimentalDecorators": true
+    "experimentalDecorators": true,
+    "baseUrl": "src/server",
+    "paths": {
+      "db/*": [ "db/*" ]
+    }
   },
   "exclude": [
     "node_modules",
