--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@types/jquery": "^2.0.40",
+    "@types/jsonwebtoken": "^7.2.0",
     "@types/knex": "0.0.41",
     "@types/office-js": "0.0.37",
     "@types/react": "^0.14.41",
