--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/react-redux": "^4.4.36",
     "@types/react-router": "^3.0.0",
     "body-parser": "^1.15.1",
+    "debug": "^2.6.3",
     "express": "^4.13.4",
     "http": "*",
     "https": "*",
