--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,8 @@
 {
-  "compilerOptions": {
-    "target": "es5",
-    "module": "commonjs",
-    "jsx": "react",
-    "removeComments": true,
-    "preserveConstEnums": true,
-    "sourceMap": true,
-    "outDir": "bin",
-    "experimentalDecorators": true,
-    "baseUrl": "src/server",
-    "paths": {
-      "db/*": [ "db/*" ]
+    "compilerOptions": {
+        "target": "es5",
+        "module": "commonjs",
+        "jsx": "react",
+        "experimentalDecorators": true
     }
-  },
-  "exclude": [
-    "node_modules",
-    "bin"
-  ],
-  "include": [
-    "src/server"
-  ]
 }
