--- a/package.json
+++ b/package.json
@@ -43,12 +43,12 @@
     "@types/react-redux": "^4.4.36",
     "@types/react-router": "^3.0.0",
     "awesome-typescript-loader": "^3.1.2",
-    "es6-shim": "^0.35.3",
+    "babel-polyfill": "^6.23.0",
     "gulp": "^3.9.1",
     "gulp-sourcemaps": "^2.4.1",
     "gulp-typescript": "^3.1.5",
     "jquery": "^3.1.1",
-    "office-ui-fabric-react": "^1.5.5",
+    "office-ui-fabric-react": "^2.5.0",
     "react": "^0.14.7",
     "react-contenteditable": "^2.0.2",
     "react-dom": "^0.14.7",
