--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "description": "An add-in for turning emails into bugs",
   "main": "index.js",
   "scripts": {
-    "build": "npm run gulp",
-    "gulp": "node_modules\\.bin\\gulp.cmd",
+    "gulp": ".\\node_modules\\.bin\\gulp.cmd",
     "rimraf": "node_modules\\.bin\\rimraf.cmd node_modules",
     "start": "node bin\\server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
