--- a/package.json
+++ b/package.json
@@ -41,11 +41,14 @@
     "@types/react-dom": "^0.14.22",
     "@types/react-redux": "^4.4.36",
     "@types/react-router": "^3.0.0",
+    "@types/superagent": "^2.0.36",
     "awesome-typescript-loader": "^3.1.2",
     "gulp": "^3.9.1",
     "gulp-sourcemaps": "^2.4.1",
     "gulp-typescript": "^3.1.5",
     "jquery": "^3.1.1",
+    "mobx": "^3.1.7",
+    "mobx-react": "^4.1.3",
     "office-ui-fabric-react": "^1.5.5",
     "react": "^0.14.7",
     "react-contenteditable": "^2.0.2",
@@ -59,6 +62,7 @@
     "source-map": "^0.5.6",
     "source-map-loader": "^0.1.6",
     "sqlite3": "^3.1.8",
+    "superagent": "^3.5.2",
     "tslint": "^3.3.0",
     "tslint-loader": "^2.1.0",
     "typescript": "^2.1.5",
