--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "xml-flow": "^1.0.1"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.16.2",
     "@types/es6-shim": "^0.31.32",
+    "@types/express": "^4.0.35",
     "@types/jquery": "^2.0.40",
     "@types/jsonwebtoken": "^7.2.0",
     "@types/knex": "0.0.41",
@@ -41,6 +43,7 @@
     "@types/react-dom": "^0.14.22",
     "@types/react-redux": "^4.4.36",
     "@types/react-router": "^3.0.0",
+    "@types/request-promise": "^4.1.33",
     "@types/superagent": "^2.0.36",
     "awesome-typescript-loader": "^3.1.2",
     "gulp": "^3.9.1",
